doc/istio/service_entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: svc-entry
spec:
  # 这个ServiceEntry表示我们可以放稳https://ext-svc.example.com就像访问网格内的服务一样
  # 因为访问外部的服务是会被限制的，而且访问外部服务用不到Istio的记录功能
  hosts:
    - ext-svc.example.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vc-entry
spec:
  hosts:
    - ext-svc.example.com
  http:
    - timeout: 3s
      route:
        - destination:
            host: ext-svc.example.com
          weight: 100


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ext-res-dr
spec:
  host: ext-svc.example.com
  trafficPolicy:
    tls:
      mode: MUTUAL
      clientCertificate: /etc/certs/myclientcert.pem
      privateKey: /etc/certs/client_private_key.pem
      caCertificates: /etc/certs/rootcacerts.pem
